--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "api_translations",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
+    "deploy": "now --prod",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
